# thresholdkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/thresholdkit/: __init__.py  core.py
tests/: test_core.py
