[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "thresholdkit"
version = "0.1.0"
description = "Pick operating thresholds for binary scorers under precision, FPR, and cost constraints — built for fraud/risk/IDV models."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sudhir Vissa" }]
dependencies = ["numpy>=1.21"]

[tool.setuptools.packages.find]
where = ["src"]
